--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "tauri": "tauri"
+    "tauri:dev": "tauri dev",
+    "tauri:build": "tauri build",
+    "release": "git add . && git commit -m \"release\" && git push && tauri build"
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.2",
