--- a/jsconfig.json
+++ b/jsconfig.json
@@ -4,5 +4,10 @@
       "@/*": ["./src/*"]
     }
   },
-  "exclude": ["node_modules", "dist"]
+  "exclude": [
+    "node_modules",
+    "dist",
+    "dist-tauri",
+    "src-tauri/target"
+  ]
 }
