--- a/package.json
+++ b/package.json
@@ -7,9 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "tauri:dev": "tauri dev",
-    "tauri:build": "tauri build",
-    "release": "git add . && git commit -m \"release\" && git push && tauri build"
+    "tauri": "tauri",
+    "release": "npm run build && git add . && git commit -m \"release\" || echo \"no git changes\" && git push && npx tauri build"
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.2",
